--- a/chart.html
+++ b/chart.html
@@ -17,7 +17,7 @@
         ]);
 
         var options = {
-          title: 'my favavorite color'
+          title: 'my favorite color'
         };
 
         var chart = new google.visualization.PieChart(document.getElementById('piechart'));
